--- a/app/src/main/res/layout/bet_bar_layout.xml
+++ b/app/src/main/res/layout/bet_bar_layout.xml
@@ -73,6 +73,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/margin_2"
         android:fontFamily="@font/din_pro_medium"
+        android:textStyle="bold"
+        android:textColor="@color/color_414655"
         android:textSize="@dimen/textSize16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/tv_balance"
