--- a/app/src/main/res/xml/line_detail_scene.xml
+++ b/app/src/main/res/xml/line_detail_scene.xml
@@ -71,7 +71,7 @@
 
     </Transition>
 
-    <ConstraintSet android:id="@+id/close">
+    <ConstraintSet>
 
         <Constraint
             android:id="@id/mask"
