--- a/app/src/main/res/layout/dialog_redenvelope_fail.xml
+++ b/app/src/main/res/layout/dialog_redenvelope_fail.xml
@@ -56,7 +56,7 @@
                 android:layout_gravity="center_horizontal|bottom"
                 android:layout_marginBottom="40dp"
                 android:gravity="center"
-                android:background="@drawable/bg_btn_blue"
+                android:background="@drawable/selector_btn_blue"
                 android:textColor="@color/color_FFFFFF"
                 android:textSize="@dimen/sp_14"
                 android:text="OK" />
