--- a/app/src/main/res/layout/motion_view_red_envelope_floating.xml
+++ b/app/src/main/res/layout/motion_view_red_envelope_floating.xml
@@ -10,56 +10,52 @@
         android:id="@+id/movable_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <RelativeLayout
+        <FrameLayout
+            android:id="@+id/rl_red_envelope"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <RelativeLayout
-                android:id="@+id/rl_red_envelope"
-                android:layout_width="@dimen/margin_68"
-                android:layout_height="60dp"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/float_window">
+            <ImageView
+                android:layout_width="85dp"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:layout_marginTop="5dp"
+                android:src="@drawable/float_window" />
 
-                <FrameLayout
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|bottom">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="26dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/float_bg_shijian" />
+
+                <TextView
+                    android:id="@+id/tv_countdown"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true">
-
-                    <ImageView
-                        android:layout_width="40dp"
-                        android:layout_height="wrap_content"
-                        android:adjustViewBounds="true"
-                        android:src="@drawable/float_bg_shijian" />
-
-                    <TextView
-                        android:id="@+id/tv_countdown"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp"
-                        android:layout_gravity="center_horizontal"
-                        android:text="60"
-                        android:textColor="@color/color_FA0200"
-                        android:textSize="10sp" />
-                </FrameLayout>
-
-
-            </RelativeLayout>
+                    android:layout_marginTop="7dp"
+                    android:layout_gravity="center_horizontal"
+                    android:text="60"
+                    android:textColor="@color/color_FA0200"
+                    android:textSize="10sp" />
+            </FrameLayout>
 
             <ImageView
                 android:id="@+id/iv_close"
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginLeft="-8dp"
-                android:layout_marginRight="@dimen/margin_10"
-                android:layout_toRightOf="@+id/rl_red_envelope"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_gravity="right"
+                android:layout_marginRight="2dp"
                 android:src="@drawable/float_btn_close" />
-        </RelativeLayout>
+        </FrameLayout>
     </org.cxct.sportlottery.ui.common.MovableAdsorptionLinearLayout>
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
