--- a/app/src/main/res/layout/component_date_range_new_selector.xml
+++ b/app/src/main/res/layout/component_date_range_new_selector.xml
@@ -126,7 +126,7 @@
         android:gravity="center"
         android:maxLines="1"
         android:text="@string/inquire"
-        android:textAllCaps="true"
+        android:textAllCaps="false"
         android:textColor="@color/color_FFFFFF_FFFFFF"
         android:textSize="@dimen/textSize16sp"
         app:layout_constraintEnd_toEndOf="parent"
