--- a/app/src/main/res/layout/fragment_money_transfer.xml
+++ b/app/src/main/res/layout/fragment_money_transfer.xml
@@ -65,6 +65,7 @@
         android:gravity="center"
         android:maxWidth="100dp"
         android:text="@string/one_key_recovery"
+        android:textAllCaps="false"
         android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize16sp"
         app:layout_constraintTop_toBottomOf="@id/view_refresh" />
