--- a/app/src/main/res/layout/fragment_money_transfer_record.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_record.xml
@@ -13,69 +13,72 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_10"/>
+        android:layout_height="@dimen/dp_10" />
+
     <org.cxct.sportlottery.ui.component.DateRangeSearchNewView
-                android:id="@+id/date_range_selector"
+        android:id="@+id/date_range_selector"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
-        app:minusDays="6"  />
-            <LinearLayout
-                android:id="@+id/ll_status"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/color_191D2F_F3F9FF"
-                android:orientation="horizontal"
-                app:layout_constraintTop_toBottomOf="@id/date_range_selector">
+        app:minusDays="6" />
 
-                <org.cxct.sportlottery.ui.component.StatusSpinnerView
-                    android:id="@+id/selector_out_plat"
-                    android:layout_width="0dp"
-                    android:layout_height="44dp"
-                    android:layout_weight="1"
-                    android:background="@color/color_191D2F_F3F9FF"
-                    app:defaultStatusText="@string/all_order_status"
-                    app:layout_constraintTop_toBottomOf="@id/date_range_selector"
-                    app:listBackground="@drawable/bg_pop_up_arrow"
-                    app:textColor="#6C7BA8" />
-                <View
-                    android:layout_marginTop="@dimen/margin_12"
-                    android:layout_marginBottom="@dimen/margin_12"
-                    android:layout_width="1dp"
-                    android:layout_height="14dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@color/color_191919_EEEFF0" />
+    <LinearLayout
+        android:id="@+id/ll_status"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_191D2F_F3F9FF"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/date_range_selector">
 
-                <org.cxct.sportlottery.ui.component.StatusSpinnerView
-                    android:id="@+id/selector_in_plat"
-                    android:layout_width="0dp"
-                    android:layout_height="44dp"
-                    android:layout_weight="1"
-                    android:background="@color/color_191D2F_F3F9FF"
-                    app:defaultStatusText="@string/all_order_status"
-                    app:layout_constraintTop_toBottomOf="@id/date_range_selector"
-                    app:listBackground="@drawable/bg_pop_up_arrow"
-                    app:textColor="#6C7BA8" />
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
+            android:id="@+id/selector_out_plat"
+            android:layout_width="0dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:background="@color/color_191D2F_F3F9FF"
+            app:defaultStatusText="@string/all_order_status"
+            app:layout_constraintTop_toBottomOf="@id/date_range_selector"
+            app:listBackground="@drawable/bg_pop_up_arrow"
+            app:textColor="#6C7BA8" />
+
+        <View
+            android:layout_marginTop="@dimen/margin_12"
+            android:layout_marginBottom="@dimen/margin_12"
+            android:layout_width="1dp"
+            android:layout_height="14dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/color_191919_EEEFF0" />
+
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
+            android:id="@+id/selector_in_plat"
+            android:layout_width="0dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:background="@color/color_191D2F_F3F9FF"
+            app:defaultStatusText="@string/all_order_status"
+            app:layout_constraintTop_toBottomOf="@id/date_range_selector"
+            app:listBackground="@drawable/bg_pop_up_arrow"
+            app:textColor="#6C7BA8" />
 
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="14dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@color/color_191919_EEEFF0" />
+        <View
+            android:layout_width="1dp"
+            android:layout_height="14dp"
+            android:layout_gravity="center_vertical"
+            android:background="@color/color_191919_EEEFF0" />
 
-                <org.cxct.sportlottery.ui.component.StatusSpinnerView
-                    android:id="@+id/selector_transfer_status"
-                    android:layout_width="0dp"
-                    android:layout_height="44dp"
-                    android:layout_weight="1"
-                    android:background="@color/color_191D2F_F3F9FF"
-                    app:defaultStatusText="@string/all_order_status"
-                    app:layout_constraintTop_toBottomOf="@id/date_range_selector"
-                    app:listBackground="@drawable/bg_pop_up_arrow"
-                    app:textColor="#6C7BA8" />
+        <org.cxct.sportlottery.ui.component.StatusSpinnerView
+            android:id="@+id/selector_transfer_status"
+            android:layout_width="0dp"
+            android:layout_height="44dp"
+            android:layout_weight="1"
+            android:background="@color/color_191D2F_F3F9FF"
+            app:defaultStatusText="@string/all_order_status"
+            app:layout_constraintTop_toBottomOf="@id/date_range_selector"
+            app:listBackground="@drawable/bg_pop_up_arrow"
+            app:textColor="#6C7BA8" />
 
-            </LinearLayout>
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_group"
         android:layout_width="match_parent"
@@ -85,95 +88,93 @@
         android:orientation="vertical"
         android:layout_marginTop="@dimen/margin_14"
         android:paddingBottom="@dimen/margin_3"
-
         app:layout_constraintTop_toBottomOf="@id/ll_status"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-                    <LinearLayout
-                        android:id="@+id/linearLayout5"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/margin_36"
-                        android:background="@drawable/bg_white_top_radius_deposit_10"
-                        android:orientation="horizontal"
-                        android:paddingVertical="4dp">
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="1.5"
-                            android:gravity="center"
-                            android:text="@string/record_time"
-                            android:textColor="@color/color_BBBBBB_333333"
-                            android:textSize="@dimen/textSize12sp"
-                            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-                            app:autoSizeMinTextSize="@dimen/textSize8sp" />
+        <LinearLayout
+            android:id="@+id/linearLayout5"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/margin_36"
+            android:background="@drawable/bg_white_top_radius_deposit_10"
+            android:orientation="horizontal">
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="2"
-                            android:gravity="center"
-                            android:maxLines="1"
-                            android:text="@string/money"
-                            android:textColor="@color/color_BBBBBB_333333"
-                            android:textSize="@dimen/textSize12sp"
-                            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-                            app:autoSizeMinTextSize="@dimen/textSize8sp" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1.3"
+                android:gravity="center"
+                android:text="@string/record_time"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize12sp"
+                app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                app:autoSizeMinTextSize="@dimen/textSize8sp" />
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:text="@string/transfer_platform"
-                            android:textColor="@color/color_BBBBBB_333333"
-                            android:textSize="@dimen/textSize12sp"
-                            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-                            app:autoSizeMinTextSize="@dimen/textSize8sp" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1.8"
+                android:gravity="center"
+                android:maxLines="1"
+                android:text="@string/money"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize12sp"
+                app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                app:autoSizeMinTextSize="@dimen/textSize8sp" />
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            android:gravity="center"
-                            android:maxLines="1"
-                            android:text="@string/recharge_log_order_state"
-                            android:textColor="@color/color_BBBBBB_333333"
-                            android:textSize="@dimen/textSize12sp"
-                            app:autoSizeMaxTextSize="@dimen/textSize12sp"
-                            app:autoSizeMinTextSize="@dimen/textSize8sp" />
-                    </LinearLayout>
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/transfer_platform"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize12sp"
+                app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                app:autoSizeMinTextSize="@dimen/textSize8sp" />
 
-                        <com.scwang.smart.refresh.layout.SmartRefreshLayout
-                            android:id="@+id/view_refresh"
-                            android:layout_width="match_parent"
-                            android:layout_height="360dp"
-                            app:srlDragRate="0.3"
-                            app:srlEnableLoadMore="true"
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/recharge_log_order_state"
+                android:textColor="@color/color_BBBBBB_333333"
+                android:textSize="@dimen/textSize12sp"
+                app:autoSizeMaxTextSize="@dimen/textSize12sp"
+                app:autoSizeMinTextSize="@dimen/textSize8sp" />
+        </LinearLayout>
 
-                            app:srlEnablePureScrollMode="true">
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-                            <androidx.recyclerview.widget.RecyclerView
-                                android:id="@+id/rv_record"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginHorizontal="@dimen/margin_1"
-                                android:layout_marginBottom="@dimen/margin_7"
-                                android:overScrollMode="never"
-                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                                tools:itemCount="2"
-                                tools:listitem="@layout/item_money_transfer_history" />
+            <com.scwang.smart.refresh.layout.SmartRefreshLayout
+                android:id="@+id/view_refresh"
+                android:layout_width="match_parent"
+                android:layout_height="360dp"
+                app:srlDragRate="0.3"
+                app:srlEnableLoadMore="true"
+                app:srlEnablePureScrollMode="true">
 
-                        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_record"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="@dimen/margin_1"
+                    android:layout_marginBottom="@dimen/margin_7"
+                    android:overScrollMode="never"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/item_money_transfer_history" />
 
-                    </FrameLayout>
+            </com.scwang.smart.refresh.layout.SmartRefreshLayout>
+
+        </FrameLayout>
 
     </LinearLayout>
 
@@ -188,6 +189,7 @@
         android:text="@string/no_data"
         android:textColor="@color/color_909090_666666"
         android:textSize="@dimen/textSize12sp"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/ll_group"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
