--- a/app/src/main/res/layout/fragment_money_transfer_sub.xml
+++ b/app/src/main/res/layout/fragment_money_transfer_sub.xml
@@ -123,6 +123,7 @@
         android:gravity="center"
         android:maxWidth="100dp"
         android:text="@string/confirm_transform"
+        android:textAllCaps="false"
         android:textColor="@color/color_FCFCFC"
         android:textSize="@dimen/textSize16sp"
         app:layout_constraintEnd_toEndOf="parent"
