--- a/app/src/main/res/drawable/selector_home_tab_inplay.xml
+++ b/app/src/main/res/drawable/selector_home_tab_inplay.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_home_inpplay_sel" android:state_checked="true" />
-    <item android:drawable="@drawable/ic_home_inpplay_sel" android:state_selected="true" />
-    <item android:drawable="@drawable/ic_home_inpplay_nor" />
+    <item android:drawable="@drawable/icon_in_play1" android:state_checked="true" />
+    <item android:drawable="@drawable/icon_in_play1" android:state_selected="true" />
+    <item android:drawable="@drawable/icon_in_play0" />
 </selector>
