--- a/app/src/main/res/drawable/selector_home_tab_recommend.xml
+++ b/app/src/main/res/drawable/selector_home_tab_recommend.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/ic_home_recommend_sel" android:state_checked="true" />
-    <item android:drawable="@drawable/ic_home_recommend_sel" android:state_selected="true" />
-    <item android:drawable="@drawable/ic_home_recommend_nor" />
+    <item android:drawable="@drawable/icon_recommend" android:state_checked="true" />
+    <item android:drawable="@drawable/icon_recommend" android:state_selected="true" />
+    <item android:drawable="@drawable/icon_recommend_nor" />
 </selector>
