--- a/app/src/main/res/layout/motion_lottery_floating.xml
+++ b/app/src/main/res/layout/motion_lottery_floating.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="70dp"
     android:layout_marginRight="10dp"
     app:layoutDescription="@xml/line_detail_scene">
 
-    <FrameLayout
+    <org.cxct.sportlottery.ui.common.MovableAdsorptionLinearLayout
         android:id="@+id/movable_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -57,6 +57,6 @@
                 android:layout_gravity="right"
                 android:src="@drawable/ic_close_lottery" />
         </FrameLayout>
-    </FrameLayout>
+    </org.cxct.sportlottery.ui.common.MovableAdsorptionLinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
