--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,6 +52,7 @@
         <item name="android:windowSoftInputMode">stateHidden</item>
     </style>
     <style name="FullScreen" parent="Theme.AppCompat.Dialog">
+        <item name="android:statusBarColor">@color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@color/transparent</item>
         <item name="android:windowIsFloating">false</item>
