--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -9,6 +9,10 @@
     android:focusableInTouchMode="true"
     tools:context=".ui.login.signIn.PhoneVerifyActivity">
 
+    <include
+        android:id="@+id/v_top"
+        layout="@layout/view_status_bar" />
+
     <ImageView
         android:id="@+id/ivLogo"
         android:layout_width="100dp"
@@ -17,7 +21,7 @@
         android:src="@drawable/ic_logo_21"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/v_top" />
 
     <ImageButton
         android:id="@+id/btn_back"
