--- a/app/src/main/res/layout/motion_lottery_floating.xml
+++ b/app/src/main/res/layout/motion_lottery_floating.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginRight="10dp"
     app:layoutDescription="@xml/line_detail_scene">
 
@@ -10,7 +11,7 @@
         android:id="@+id/movable_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="130dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
@@ -45,7 +46,7 @@
                     android:gravity="center"
                     android:lines="2"
                     android:textFontWeight="600"
-                    android:text="2022-10-10\n23:45:45"
+                    tools:text="2022-10-10\n23:45:45"
                     android:textColor="@color/color_FFFFFF"
                     android:textSize="9sp" />
             </FrameLayout>
