--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,6 +51,7 @@
     <color name="color_616161">#616161</color>
     <color name="color_b4b4b4">#b4b4b4</color>
     <color name="color_8F8F8F">#8F8F8F</color>
+    <color name="color_F8F8F8">#F8F8F8</color>
     <color name="color_e5e5e5">#e5e5e5</color>
     <color name="color_000000">#000000</color>
     <color name="color_333333">#333333</color>
@@ -405,6 +406,8 @@
     <color name="color_D3DEF5">#D3DEF5</color>
     <color name="color_8071ADFF">#8071ADFF</color>
     <color name="color_801971FD">#801971FD</color>
+    <color name="color_01ce84">#01ce84</color>
+    <color name="color_01FFA3">#01FFA3</color>
     <color name="color_F2F9FF">#F2F9FF</color>
     <color name="color_996A7797">#996A7797</color>
     <color name="color_33FFAB2E">#33FFAB2E</color>
@@ -462,6 +465,7 @@
     <color name="color_E3E3E3">#E3E3E3</color>
     <color name="color_F1A027">#F1A027</color>
     <color name="color_0500181E">#0500181E</color>
+    <color name="color_00181E">#00181E</color>
     <color name="color_80C9CFD7">#80C9CFD7</color>
     <color name="color_EC4139">#EC4139</color>
     <color name="color_F73C6C">#F73C6C</color>
