--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -391,6 +391,7 @@
     <color name="color_E23434">#E23434</color>
     <color name="color_C9CFD7">#C9CFD7</color>
     <color name="color_414655">#414655</color>
+    <color name="color_f1f3f6">#F1F3F6</color>
     <color name="color_111216">#111216</color>
     <color name="color_025BE8">#025BE8</color>
     <color name="color_A5A9B3">#A5A9B3</color>
