--- a/app/src/main/res/layout/bottom_register_layout.xml
+++ b/app/src/main/res/layout/bottom_register_layout.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <LinearLayout
@@ -33,7 +34,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
         android:lineSpacingExtra="3dp"
-        android:text="Copyright © 2023 OKBET ALL RIGHTS RESERVED"
+        tools:text="Copyright © 2023 OKBET ALL RIGHTS RESERVED"
         android:textColor="@color/color_6D7693"
         android:textSize="@dimen/textSize10sp" />
 
