--- a/app/src/main/res/layout/fragment_profile_center.xml
+++ b/app/src/main/res/layout/fragment_profile_center.xml
@@ -571,6 +571,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
+                        android:foreground="@drawable/fg_ripple"
                         android:gravity="center"
                         android:minHeight="@dimen/margin_50"
                         android:orientation="horizontal">
